[project]
name = "lc-shift"
version = "0.1.0"
description = "LLM request router - picks the right model tier based on prompt complexity, budget, or latency."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Moguloju Sai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

dependencies = ["pydantic>=2.0,<3.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lc_shift"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 99
